--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>TechGames</title>
+    <link rel="stylesheet" href="/css/style.css"> <!-- Asegúrate de que la ruta sea correcta -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Agregar Font Awesome -->
 </head>
 <body>
-    {{{body}}}
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/products">Productos</a></li>
+                <li><a href="/carts">Carrito</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        {{{body}}} <!-- Este es el lugar donde se insertará el contenido de las otras vistas -->
+    </main>
+
+    <footer>
+        <p>&copy; 2025 TechGames. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
